@@ -382,7 +382,7 @@ static int check_device_type(uint8_t id)
 
 static int check_data_type(uint8_t id)
 {
-	const uint8_t types[] = { 0, TI83p_AMS, TI83p_APPL, TI83p_CERTIF, TI83p_LICENSE  };
+	const uint8_t types[] = { 0, TI83p_AMS, TI83p_APPL, TI83p_CERT, TI83p_LICENSE  };
 	int i;
 
 	for(i = 1; i <= sizeof(types)/sizeof(uint8_t); i++)
@@ -445,7 +445,7 @@ int ti8x_file_read_flash(const char *filename, Ti8xFlash *head)
 	  if(!check_data_type(content->data_type))
 				return ERR_INVALID_FILE;
 
-	  if(content->data_type == TI83p_CERTIF || content->data_type == TI83p_LICENSE)
+	  if(content->data_type == TI83p_CERT || content->data_type == TI83p_LICENSE)
 	  {
 		  // get data like TI9X
 		  content->data_part = (uint8_t *)g_malloc0(content->data_length + 256);
@@ -810,7 +810,7 @@ int ti8x_file_write_flash(const char *fname, Ti8xFlash *head, char **real_fname)
     if(fwrite_long(f, content->data_length) < 0) goto tfwf;
 
 	// data
-	if(content->data_type == TI83p_CERTIF || content->data_type == TI83p_LICENSE)
+	if(content->data_type == TI83p_CERT || content->data_type == TI83p_LICENSE)
 	{
 		if(fwrite(content->data_part, 1, content->data_length, f) < content->data_length) goto tfwf;
 	}
