@@ -28,24 +28,24 @@
 
 #define TI84p_REAL   0x00
 #define TI84p_LIST   0x01
-#define TI84p_MATRX  0x02
+#define TI84p_MAT    0x02
 #define TI84p_EQU    0x03
-#define TI84p_STRNG  0x04
+#define TI84p_STR    0x04
 #define TI84p_PRGM   0x05
 #define TI84p_ASM    0x06
 #define TI84p_PIC    0x07
 #define TI84p_GDB    0x08
 #define TI84p_CPLX   0x0C
-#define TI84p_WDW    0x0F
+#define TI84p_WINDW  0x0F
 #define TI84p_ZSTO   0x10
-#define TI84p_TAB    0x11
+#define TI84p_TABLE  0x11
 #define TI84p_BKUP   0x13
-#define TI84p_APPVAR 0x15
+#define TI84p_APPV   0x15
 #define TI84p_GROUP  0x17
 #define TI84p_DIR    0x19
 #define TI84p_AMS    0x23
 #define TI84p_APPL   0x24
-#define TI84p_CERTIF	0x25
+#define TI84p_CERT	 0x25
 #define TI84p_IDLIST 0x26
 #define TI83p_GETCERT 0x27
 #define TI84p_CLK    0x29
